# Claude-auto-register-GUI

./: .gitignore  AUTOMATION_OPTIMIZATION.md  GUI_DEVELOPMENT_LOG.md  GUI_REFACTOR_README.md  GUI_使用指南.md  PROXY_MANAGER_README.md  Proxy.txt  README.md  config.json  config.template.env  domList.json  gui_app.py  install_dependencies.py  main.py  proxy_cli.py  pyproject.toml  requirements.txt  selector_report.json  sessionKey-phone.example.txt  sessionKey.example.txt  smart_selectors.json  test_accounts.csv  自定义注册功能说明.md
chrome_bot/: __init__.py  insbot.py  robust_automation.py  smart_automation.py
cloudflare/: __init__.py  cloudflare.py
examples/: batch_register.py  cookie_demo.py  use_session_key.py
gui/: __init__.py  legacy_main_window.py  main_window.py  modern_app.py  modern_pages.py  register_engine.py
gui/components/: __init__.py  batch_register.py  charts.py  config_panel.py  dashboard.py
gui/legacy_components/: advanced_settings.py  batch_register.py  dashboard.py  log_viewer.py  proxy_manager.py
gui/resources/: gui_config.json  styles.py
gui/services/: __init__.py  config_service.py  log_service.py  proxy_service.py  registration_service.py
gui/utils/: __init__.py  gui_config.py  hotkey_manager.py  system_tray.py  theme_manager.py  validators.py
mail/: __init__.py  mail.py
utils/: __init__.py  config.template.py  cookie_utils.py  proxy_manager.py
